--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
 
 <body>
 
+  <header>Weather Dashboard</header>
+
+  <section>
+
+    <H3>Search for a City:</H3>
+
+    <input type="text">
+
+    <button>Search</button>
+    
+    <div></div>
+
+  </section>
+
+  <section>
+
+    <div>
+
+    </div>
+
+    <h4>5-Day Forecast</h4>
+
+    <section>
+
+      
+
+    </section>
+
+  </section>
+
 </body>
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
 <script src="/assets/JS/script.js"></script>
 
