--- a/index.html
+++ b/index.html
@@ -2,47 +2,65 @@
 <html>
 
 <head>
-  <title>Demo</title>
+  <title>forecast</title>
   <meta charset="UTF-8" />
 
   <link rel="stylesheet" type="text/css" href="./assets/CSS/reset.css">
+
   <link rel="stylesheet" type="text/css" href="./assets/CSS/style.css" />
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   
 </head>
 
-<body>
+<body >
 
-  <header>Weather Dashboard</header>
+  <!--title-->
 
-  <section>
+  <header class="banner">
 
-    <H3>Search for a City:</H3>
+    <h4 class="text-center pt-2">Weather Dashboard</h4>
 
-    <input type="text">
+    </header>
 
-    <button>Search</button>
+  <!--Search bar-->
+
+  <article class="d-flex">
+
+    <section class="d-flex flex-column col-4">
+
+      <H3 class="mb-3">Search for a City:</H3>
+
+      <input class="mb-3" type="text">
+
+      <button class="banner">Search</button>
     
-    <div></div>
+      <div>
 
-  </section>
-
-  <section>
-
-    <div>
-
-    </div>
-
-    <h4>5-Day Forecast</h4>
-
-    <section>
-
-      
+      </div>
 
     </section>
 
-  </section>
+    <!--forecast-->
+
+    <section class="col-8">
+
+      <div class="border border-2">
+
+      </div>
+
+      <h4>5-Day Forecast</h4>
+
+      <section class="d-flex flex-column flex-md-row justify-content-md-around" >
+
+      </section>
+
+    </section>
+
+  </article>
 
 </body>
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
