--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta charset="UTF-8" />
 
   <link rel="stylesheet" type="text/css" href="./assets/CSS/reset.css">
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" type="text/css" href="./assets/CSS/style.css" />
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   
 </head>
 
@@ -160,6 +160,6 @@
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-<script src="/assets/JS/script.js"></script>
+<script src="./assets/JS/script.js"></script>
 
 </html>
