Fixes bug on live

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!--title-->
 
-  <header class="banner">
+  <header class="BackgroundCustom">
 
     <h4 class="text-center pt-2">Weather Dashboard</h4>
 
@@ -33,7 +33,7 @@
 
       <input id="cityInp" class="mb-3" type="text">
 
-      <button id="search" class="banner">Search</button>
+      <button id="search" class="BackgroundCustom">Search</button>
     
       <div id="PastLocal" class="d-flex flex-column">
 
@@ -45,7 +45,7 @@
 
     <section id="forecast" class="col-8">
 
-      <div class="border border-2 banner">
+      <div class="border border-2 BackgroundCustom">
 
         <section class="d-flex">
 
@@ -79,7 +79,7 @@
 
       <section class="d-flex flex-column flex-md-row justify-content-md-around" >
 
-        <div id="day1" class="banner">
+        <div id="day1" class="BackgroundCustom">
 
           <h6></h6>
 
@@ -93,7 +93,7 @@
 
         </div>
 
-        <div id="day2" class="banner">
+        <div id="day2" class="BackgroundCustom">
 
           <h6></h6>
 
@@ -107,7 +107,7 @@
 
         </div>
 
-        <div id="day3" class="banner">
+        <div id="day3" class="BackgroundCustom">
 
           <h6></h6>
 
@@ -121,7 +121,7 @@
 
         </div>
 
-        <div id="day4" class="banner">
+        <div id="day4" class="BackgroundCustom">
 
           <h6></h6>
 
@@ -135,7 +135,7 @@
 
         </div>
 
-        <div id="day5" class="banner">
+        <div id="day5" class="BackgroundCustom">
 
           <h6></h6>
 
